--- a/reports/comentarios-e-cultura.Rmd
+++ b/reports/comentarios-e-cultura.Rmd
@@ -147,7 +147,7 @@ A terceira análise que faremos é baseada na **escolha das variáveis equivocad
 Nos eixo X e Y devem estar as variáveis mais importantes para a análise. Dessa forma, para constatar essa hipótese, serão mudadas as variáveis x e size: a variável x que antes era o PDI será a Internet e a variável y que antes era PDI será os usuários. Perceba que não é possível visualizar de forma clara a relação entre as variáveis PDI e a porcentagem de usuários devido a não correspondência visual entre tamanho das bolas e cores.
 
  ```{r}
-dados %>%
+grafico3<-dados %>%
     ggplot(aes(
         x = Internet,
         y = comentaram_prop,
@@ -171,10 +171,44 @@ A quarta análise que faremos é baseada na **utilização de fontes ilegíveis*
 
 
 **ANÁLISE DO GRÁFICO 5**
-A quinta análise que faremos é baseada na **utilização de fontes ilegíveis**. Parece uma dica tão óbvia, mas o uso de fontes regularmente é uma fonte de problemas numa visualização. Sabemos que Lobster é bonito, mas não significa que você deve usa-la num gráfico. Lembre-se, é uma narrativa, não é arte. 
+A quinta análise que faremos é baseada na **utilização de cores erradas para títulos e legendas**. Parece uma dica tão óbvia, mas o uso de fontes regularmente é uma fonte de problemas numa visualização. 
 
+```{r}
 
+grafico5<-dados %>%
+    ggplot(aes(
+        x = PDI,
+        y = comentaram_prop,
+        color = Internet,
+        size = log10(usuarios),
+        
+    )) +
+    geom_point(alpha = .6)+
+    theme_light()+
+    theme(plot.title = element_text(size = 10,face="bold",family="Times new Roman")) +
+    labs(
+        title = "Relação entre os Usuários, seus comentários, PDI e acesso à Internet",
+        position="plot",
+        x = "Índice de Distância de Poder (PDI)" ,
+        y = "Porcentagem de usuários que comentam"
+       
+    )
+#adicionando mais características as legendas
+#https://socviz.co/refineplots.html
+grafico5 + theme(legend.position = "top",
+           plot.title = element_text(size=rel(1),
+                                     lineheight=.5,
+                                     family="Times",
+                                     face="bold.italic",
+                                     colour="orange"),
+           axis.text.x = element_text(size=rel(1.1),
+                                      family="Courier",
+                                      face="bold",
+                                      color="yellow"))
 
+grafico5
+
+``` 
 
 Bônus
 Inclua o continente dos países (`six_regions`) na visualização.
